cabal-version:       3.0
name:                aoc20-hs
version:             0.1.0.0
synopsis:            Advent of Code 2020 in Haskell
license:             MIT
license-file:        LICENSE.txt
author:              Jonathan Yong
maintainer:          yongrenjie@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
data-dir:            inputs

-- common stanzas: see https://vrom911.github.io/blog/common-stanzas
common base-stanza
  build-depends:       base ^>=4.14
  default-language:    Haskell2010
  other-modules:       Paths_aoc20_hs
  ghc-options:         -Wall -O2

executable d1
  import:              base-stanza
  main-is:             d1.hs

executable d2
  import:              base-stanza
  main-is:             d2.hs
  build-depends:       text

executable d3
  import:              base-stanza
  main-is:             d3.hs

executable d4
  import:              base-stanza
  main-is:             d4.hs
  build-depends:       text, containers, megaparsec

executable d5
  import:              base-stanza
  main-is:             d5.hs

executable d6
  import:              base-stanza
  main-is:             d6.hs
  build-depends:       split

executable d7
  import:              base-stanza
  main-is:             d7.hs
  build-depends:       split, containers

executable d8
  import:              base-stanza
  main-is:             d8.hs
  build-depends:       containers, megaparsec

executable d9
  import:              base-stanza
  main-is:             d9.hs

executable d10
  import:              base-stanza
  main-is:             d10.hs
