cabal-version:       3.0
name:                aoc20-hs
version:             0.1.0.0
synopsis:            Advent of Code 2020 in Haskell
license:             MIT
license-file:        LICENSE.txt
author:              Jonathan Yong
maintainer:          yongrenjie@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
data-dir:            inputs

-- common stanzas: see https://vrom911.github.io/blog/common-stanzas
common base-stanza
  build-depends:       base ^>=4.14
                       , split
                       , text
                       , containers
                       , megaparsec
                       , mtl
  default-language:    Haskell2010
  other-modules:       Paths_aoc20_hs
  ghc-options:         -Wall -O2

common base-stanza-relude
  build-depends:       base ^>=4.14
                       , relude ^>=0.7.0.0
                       , split
                       , text
                       , containers
                       , megaparsec
                       , mtl
  default-language:    Haskell2010
  other-modules:       Paths_aoc20_hs
  ghc-options:         -Wall -O2
  mixins:              base hiding (Prelude)
                       , relude (Relude as Prelude)


executable d1
  import:              base-stanza
  main-is:             d1.hs

executable d2
  import:              base-stanza
  main-is:             d2.hs

executable d3
  import:              base-stanza
  main-is:             d3.hs

executable d4
  import:              base-stanza
  main-is:             d4.hs

executable d5
  import:              base-stanza
  main-is:             d5.hs

executable d6
  import:              base-stanza
  main-is:             d6.hs

executable d7
  import:              base-stanza
  main-is:             d7.hs

executable d8
  import:              base-stanza
  main-is:             d8.hs

executable d9
  import:              base-stanza
  main-is:             d9.hs

executable d10
  import:              base-stanza
  main-is:             d10.hs

executable d11
  import:              base-stanza
  main-is:             d11.hs

executable d12
  import:              base-stanza
  main-is:             d12.hs

executable d13
  import:              base-stanza
  main-is:             d13.hs

executable d14
  import:              base-stanza
  main-is:             d14.hs

executable d15
  import:              base-stanza
  main-is:             d15.hs

executable d16
  import:              base-stanza
  main-is:             d16.hs

executable d17
  import:              base-stanza
  main-is:             d17.hs

